# fida-contracts

./: .gitignore  Makefile  README.md  cabal.project  fida-contracts.cabal  fida-contracts.code-workspace  flake.nix  fourmolu.yaml  hie.yaml  shell.nix
.github/workflows/: ci.yaml
app/serialise/: Main.hs
src/Fida/Contract/: FidaInvestorContract.hs  FidaPolicyContract.hs  Insurance.hs  Investor.hs  ScriptRepository.hs  SystemId.hs  SystemIdMintingPolicy.hs  Types.hs  Utils.hs
src/Fida/Contract/Insurance/: Authority.hs  Datum.hs  Identifier.hs  InsuranceId.hs  PiggyBank.hs  Redeemer.hs  Tokens.hs
src/Fida/Contract/Insurance/Lifecycle/: Cancelled.hs  Funding.hs  Initiated.hs  OnRisk.hs
test/: Main.hs
test/Fida/Contract/: FidaPolicyContractTest.hs  TestToolbox.hs
test/Fida/Contract/Insurance/: PiggyBankTest.hs
test/Fida/Contract/Insurance/Lifecycle/: FundingTest.hs  InitiatedTest.hs  OnRiskTest.hs
test/Fida/Contract/TestToolbox/: Action.hs  Investor.hs  Time.hs  TypedValidators.hs  Users.hs  Utils.hs
test/Fida/Contract/TestToolbox/Action/: MakeInsurancePolicy.hs
test/Plutus/Model/Contract/: Ext.hs
