cabal-version:      3.0
name:               fida-contracts
version:            0.1
synopsis:           TODO
description:        TODO
license:
license-file:
author:             TODO
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.7
extra-source-files: README.md

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fplugin-opt PlutusTx.Plugin:defer-errors

  --    -fplugin-opt PlutusTx.Plugin:defer-errors -Werror
  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:      base ^>=4.14
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules:
    Fida.Contract.Insurance
    Fida.Contract.Insurance.Authority
    Fida.Contract.Insurance.Datum
    Fida.Contract.Insurance.InsuranceId
    Fida.Contract.Insurance.Lifecycle.Cancelled
    Fida.Contract.Insurance.Lifecycle.Funding
    Fida.Contract.Insurance.Lifecycle.Initiated
    Fida.Contract.Insurance.Lifecycle.OnRisk
    Fida.Contract.Insurance.PiggyBank
    Fida.Contract.Insurance.Redeemer
    Fida.Contract.Insurance.Tokens
    Fida.Contract.Investor
    Fida.Contract.SystemId
    Fida.Contract.Utils

  build-depends:
    , bytestring         ^>=0.10.12.0
    , cardano-api
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , text

  hs-source-dirs:  src

executable fida-contracts-serialise
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , aeson
    , bytestring
    , cardano-api
    , fida-contracts
    , optparse-applicative
    , plutonomy
    , plutus-ledger-api
    , serialise

  hs-source-dirs: app/serialise

test-suite fida-contracts-test
  import:         common-lang
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Fida.Contract.FidaPolicyContractTest
    Fida.Contract.Insurance.Lifecycle.FundingTest
    Fida.Contract.Insurance.Lifecycle.InitiatedTest
    Fida.Contract.Insurance.Lifecycle.OnRiskTest
    Fida.Contract.Insurance.PiggyBankTest
    Fida.Contract.TestToolbox
    Fida.Contract.TestToolbox.Action
    Fida.Contract.TestToolbox.Action.MakeInsurancePolicy
    Fida.Contract.TestToolbox.Time
    Fida.Contract.TestToolbox.TypedValidators
    Fida.Contract.TestToolbox.Users
    Fida.Contract.TestToolbox.Utils
    Plutus.Model.Contract.Ext

  build-depends:
    , bytestring
    , containers
    , fida-contracts
    , plutus-ledger-api
    , plutus-simple-model
    , plutus-tx
    , plutus-tx-plugin
    , tasty
    , tasty-golden
    , tasty-hunit
    , text

  hs-source-dirs: test
